# hyperon_analysis

./: 12-1.md  12_07.md  12_8.md  analyze.py  average_models.py  fit_analysis.py  fit_comparison.py  fit_model_strange_1.py  fit_model_strange_2.py  fit_model_strange_all.py  fpi_fit.py  get_models.py  i_o.py  lsqfitics.old  non_analytic_functions.py  plots.ipynb  priors.py  pyproject.toml  read_data.py  test_strats.ipynb  utils.py  xi_fit.py
deprecated/: priors.py
meeting/: .3_22.md.swp  3_22.md
notes/: notes.tex
