[tool.poetry]
name = "hyperons"
version = "0.1.0"
description = ""
authors = ["gdb"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyaml = "^23.9.7"
lsqfit = "^13.0.3"
gvar = "^12.0"
matplotlib = "^3.8.2"
ipykernel = "^6.27.0"
h5py = "^3.10.0"
jupyterlab = "^4.0.9"
vegas = "^5.5"
latex = "^0.7.0"
pandas = "^2.1.3"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
